# rust-database-api-example

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  my.cnf
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma-cli/src/: main.rs
src/: db.rs  main.rs  routes.rs
src/routes/: examples.rs  users.rs
